...
            VStack {
                // Asynchronously load and display the image from the URL
                AsyncImage(url: image.media.m) { phase in
                    switch phase {
                    case .empty:
                        // Display a progress view while the image is loading
                        ProgressView()
                    case .success(let image):
                        // Display the loaded image
                        image
                            .resizable()
                            .scaledToFit()
                            .transition(.scale)
...
                    Text("Dimensions: \(widthHeight.width)x\(widthHeight.height)")
                        .accessibilityLabel("Dimensions: \(widthHeight.width) by \(widthHeight.height)")
                }
                
                // Share Button
                Button(action: shareImage) {
                    Text("Share")
                }
                .padding()
            }
            .padding()
        }
    }
...
