...
    @StateObject var viewModel = FlickrViewModel()
    @State private var searchText = ""
    
    var body: some View {
        NavigationView {
            VStack {
                SearchBarView(text: $searchText, placeholder: "Search")
                    .padding()
                if viewModel.isLoading {
                    ProgressView()
                        .accessibilityIdentifier("ProgressView")
                } else {
                    ScrollView {
...
